--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -6,7 +6,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: publish Python distribution to TestPyPI
+name: Publish Python distribution to TestPyPI
 
 on: release
 
