--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pycnet-audio"
-version = "0.5.5"
+version = "0.5.6"
 
 
 dependencies = [
@@ -16,7 +16,9 @@ dependencies = [
     "tensorflow-cpu==2.2",
     "protobuf==3.20",
     "pillow==8.2",
-    "pandas==1.4"
+    "pandas==1.4",
+	"seaborn",
+	"matplotlib"
 ]
 requires-python = ">= 3.8"
 
@@ -44,6 +46,7 @@ Issues = "https://github.com/zjruff/pycnet-audio/issues"
 
 
 [project.scripts]
+plot_dets = "pycnet.plot:plotFromFile"
 pycnet = "pycnet.__main__:main"
 test_pycnet = "pycnet.TestPycnet:main"
 
@@ -53,6 +56,7 @@ packages = [
     "pycnet", 
     "pycnet.cnet", 
     "pycnet.file", 
+	"pycnet.plot",
     "pycnet.process", 
     "pycnet.prog", 
     "pycnet.review"
