--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,19 +8,18 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "pycnet-audio"
-version = "0.5.8"
+version = "0.5.9"
 
 
 dependencies = [
-    "numpy==1.23",
-    "tensorflow-cpu==2.2",
-    "protobuf==3.20",
-    "pillow==8.2",
-    "pandas==1.4",
+    "tensorflow-cpu<2.14",
+    "pillow",
+    "pandas",
+	"scipy",
 	"seaborn",
 	"matplotlib"
 ]
-requires-python = ">= 3.8"
+requires-python = ">=3.8,< 3.12"
 
 
 authors = [{name = "Zack Ruff", email = "zjruff@gmail.com"}]
@@ -28,7 +27,7 @@ maintainers = [{name = "Zack Ruff", email = "zjruff@gmail.com"}]
 description = "Audio processing with PNW-Cnet"
 readme = "README.md"
 license = {file = "LICENSE.md"}
-keywords = ["bioacoustics", "deep learning"]
+keywords = ["bioacoustics", "deep learning", "ecology"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Science/Research",
